--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Also see <a href="https://scholar.google.com/citations?user=sLqa-3oAAAAJ&hl=en" 
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 <b><i class="fa-solid fa-pen-to-square" style="font-size:24px"></i> Updates:</b><br><br>
 <ul>
-	<li><i>Feb. 2024:</i> <i class="fa-duotone fa-trophy"></i> We are hosting CVPR 2024 Long-form Video Understanding Challenge @ <a href="https://sites.google.com/view/loveucvpr24/track1">LOVEU</a>
+	<li><i>Apr. 2024:</i> <i class="fa-solid fa-trophy"></i> We are hosting CVPR 2024 Long-form Video Understanding Challenge @ <a href="https://sites.google.com/view/loveucvpr24/track1">LOVEU</a>
 	</li><br>
 	
 	<li><i>Feb. 2024:</i> <i class="fa-regular fa-note-sticky" style="font-size:20px"></i> Our paper <i>MovieChat: From Dense Token to Sparse Memory in Long Video Understanding</i> is accepted by Computer Vision and Pattern Recognition (CVPR), 2024.
