--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ use-site-title: false
 </head>
 
 <br>
-Enxin Song is a master student at Zhejiang University, with <a href="https://cvnext.github.io/">CVNext Lab</a> advised by Prof. <a href="https://person.zju.edu.cn/en/gaoangwang/">Gaoang Wang</a>. She is fortunate to have internship at Media Computing Group, Microsoft Research Asia, advised by Dr. <a href="https://scholar.google.com/citations?user=Ow4R8-EAAAAJ&hl=en&oi=ao">Xun Guo</a>.Her research interests include domain adaptation, video understanding, and multi-modality learning.
+Enxin Song is a master student at Zhejiang University, with <a href="https://cvnext.github.io/">CVNext Lab</a> advised by Prof. <a href="https://person.zju.edu.cn/en/gaoangwang/">Gaoang Wang</a>. She was fortunate to have internship at Media Computing Group, Microsoft Research Asia, advised by Dr. <a href="https://scholar.google.com/citations?user=Ow4R8-EAAAAJ&hl=en&oi=ao">Xun Guo</a>.Her research interests include image generation, video understanding, and multi-modality learning.
 <br>
 
 <br>
@@ -35,12 +35,31 @@ Also see <a href="https://scholar.google.com/citations?user=sLqa-3oAAAAJ&hl=en" 
 			<b>Enxin Song</b>, Wenhao Chai, Guanhong Wang, Yucheng Zhang, Haoyang Zhou, Feiyang Wu, Xun Guo, Tian Ye, Yan Lu, Jenq-Neng Hwang, Gaoang Wang✉
 			<br>
 			<br>
-			<a href="https://arxiv.org/abs/2307.16449">[Paper]</a>
+			<a href="https://openaccess.thecvf.com/content/CVPR2024/html/Song_MovieChat_From_Dense_Token_to_Sparse_Memory_for_Long_Video_CVPR_2024_paper.html">[Paper]</a>
 			<a href="https://rese1f.github.io/MovieChat/">[Code]</a>
 			<img alt="NPM" src="https://img.shields.io/github/stars/rese1f/MovieChat?style=social">
 			<br>
 			<font color="grey" size="2">
 			 A novel framework that integrating vision models and LLMs to conduct long video understanding tasks. 
+			</font>
+	  	</p>
+	</li>
+
+	<li>
+		<p style="font-size:16px"> 
+			<strong>
+			MovieChat+: Question-aware Sparse Memory for Long Video Question Answering
+			</strong>
+			<br>
+			<b>Enxin Song</b>, Wenhao Chai, Tian Ye, Jenq-Neng Hwang, Xi Li, Gaoang Wang✉
+			<br>
+			<br>
+			<a href="https://arxiv.org/abs/2404.17176">[Paper]</a>
+			<a href="https://rese1f.github.io/MovieChat/">[Code]</a>
+			<img alt="NPM" src="https://img.shields.io/github/stars/rese1f/MovieChat?style=social">
+			<br>
+			<font color="grey" size="2">
+			 A novel framework that integrating question-aware sparse memory to conduct long video understanding tasks. 
 			</font>
 	  	</p>
 	</li>
@@ -54,6 +73,8 @@ Also see <a href="https://scholar.google.com/citations?user=sLqa-3oAAAAJ&hl=en" 
 <ul>
 	<li><i>Apr. 2024:</i> <i class="fa-solid fa-trophy"></i> We are hosting CVPR 2024 Long-form Video Understanding Challenge @ <a href="https://sites.google.com/view/loveucvpr24/track1">LOVEU</a>
 	</li><br>
+
+	<li><i>Apr. 2024:</i> <i class="fa-regular fa-note-sticky" style="font-size:20px"></i> Our paper <i>MovieChat+: Question-aware Sparse Memory for Long Video Question Answering</i> is released, and the code is available at <a href="https://rese1f.github.io/MovieChat/">website</a>.
 	
 	<li><i>Feb. 2024:</i> <i class="fa-regular fa-note-sticky" style="font-size:20px"></i> Our paper <i>MovieChat: From Dense Token to Sparse Memory in Long Video Understanding</i> is accepted by Computer Vision and Pattern Recognition (CVPR), 2024.
 	</li><br>
