--- a/index.html
+++ b/index.html
@@ -32,15 +32,17 @@ Also see <a href="https://scholar.google.com/citations?user=sLqa-3oAAAAJ&hl=en" 
 			MovieChat: From Dense Token to Sparse Memory for Long Video Understanding
 			</strong>
 			<br>
-			<b>Enxin Song</b>, Wenhao Chai, Guanhong Wang, Yucheng Zhang, Haoyang Zhou, Feiyang Wu, Xun Guo, Tian Ye, Yan Lu, Jenq-Neng Hwang, Gaoang Wang✉
+			<b>Enxin Song*</b>, Wenhao Chai*, Guanhong Wang*, Yucheng Zhang, Haoyang Zhou, Feiyang Wu, Xun Guo, Tian Ye, Yan Lu, Jenq-Neng Hwang, Gaoang Wang✉
 			<br>
 			<br>
+			<a href="https://rese1f.github.io/MovieChat/">[Website]</a>
 			<a href="https://openaccess.thecvf.com/content/CVPR2024/html/Song_MovieChat_From_Dense_Token_to_Sparse_Memory_for_Long_Video_CVPR_2024_paper.html">[Paper]</a>
-			<a href="https://rese1f.github.io/MovieChat/">[Code]</a>
+			<a href="https://github.com/rese1f/MovieChat">[Code]</a>
+			<a href="https://huggingface.co/datasets/Enxin/MovieChat-1K_train">[Benchmark]</a>
 			<img alt="NPM" src="https://img.shields.io/github/stars/rese1f/MovieChat?style=social">
 			<br>
 			<font color="grey" size="2">
-			 A novel framework that integrating vision models and LLMs to conduct long video understanding tasks. 
+			 MovieChat achieves state-of-the-art performace in extra long video (more than 10K frames) understanding by introducing memory mechanism. 
 			</font>
 	  	</p>
 	</li>
@@ -51,15 +53,38 @@ Also see <a href="https://scholar.google.com/citations?user=sLqa-3oAAAAJ&hl=en" 
 			MovieChat+: Question-aware Sparse Memory for Long Video Question Answering
 			</strong>
 			<br>
-			<b>Enxin Song</b>, Wenhao Chai, Tian Ye, Jenq-Neng Hwang, Xi Li, Gaoang Wang✉
+			<b>Enxin Song*</b>, Wenhao Chai*, Tian Ye, Jenq-Neng Hwang, Xi Li, Gaoang Wang✉
 			<br>
 			<br>
 			<a href="https://arxiv.org/abs/2404.17176">[Paper]</a>
-			<a href="https://rese1f.github.io/MovieChat/">[Code]</a>
+			<a href="https://github.com/rese1f/MovieChat">[Code]</a>
 			<img alt="NPM" src="https://img.shields.io/github/stars/rese1f/MovieChat?style=social">
 			<br>
 			<font color="grey" size="2">
 			 A novel framework that integrating question-aware sparse memory to conduct long video understanding tasks. 
+			</font>
+	  	</p>
+	</li>
+
+	<li>
+		<p style="font-size:16px"> 
+			<strong>
+			AuroraCap: Efficient, Performant Video Detailed Captioning and a New Benchmark
+			</strong>
+			<br>
+			Wenhao Chai*†, <b>Enxin Song*</b>,, Yilun Du, Chenlin Meng, Vashisht Madhavan, Omer Bar-Tal, Jeng-Neng Hwang, Saining Xie, Christopher D. Manning
+			<br>
+			<br>
+			<a href="https://rese1f.github.io/aurora-web/">[Website]</a>
+			<a href="https://arxiv.org/abs/2410.03051">[Paper]</a>
+			<a href="https://huggingface.co/collections/wchai/auroracap-66d117ffe13bedda96702013">[Model]</a>
+			<a href="https://huggingface.co/datasets/wchai/Video-Detailed-Caption">[Benchmark]</a>
+			<a href="https://huggingface.co/datasets/wchai/AuroraCap-trainset">[Dataset]</a>
+			<a href="https://github.com/rese1f/aurora">[Code]</a>
+			<img alt="NPM" src="https://img.shields.io/github/stars/rese1f/aurora?style=social">
+			<br>
+			<font color="grey" size="2">
+			 AuroraCap is a multimodal LLM designed for image and video detailed captioning. We also release VDC, the first benchmark for detailed video captioning.
 			</font>
 	  	</p>
 	</li>
@@ -75,6 +100,7 @@ Also see <a href="https://scholar.google.com/citations?user=sLqa-3oAAAAJ&hl=en" 
 	</li><br>
 
 	<li><i>Apr. 2024:</i> <i class="fa-regular fa-note-sticky" style="font-size:20px"></i> Our paper <i>MovieChat+: Question-aware Sparse Memory for Long Video Question Answering</i> is released, and the code is available at <a href="https://rese1f.github.io/MovieChat/">website</a>.
+	</li><br>
 	
 	<li><i>Feb. 2024:</i> <i class="fa-regular fa-note-sticky" style="font-size:20px"></i> Our paper <i>MovieChat: From Dense Token to Sparse Memory in Long Video Understanding</i> is accepted by Computer Vision and Pattern Recognition (CVPR), 2024.
 	</li><br>
