--- a/index.html
+++ b/index.html
@@ -96,28 +96,49 @@ Also see <a href="https://scholar.google.com/citations?user=sLqa-3oAAAAJ&hl=en" 
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 <b><i class="fa-solid fa-pen-to-square" style="font-size:24px"></i> Updates:</b><br><br>
 <ul>
+	<li><i>Oct. 2024:</i> We submit some baseline (AuroraCap, MovieChat, MovieChat-Onevision) and some benchmark (VDC, MovieChat-1K) to <a href="https://github.com/EvolvingLMMs-Lab/lmms-eval">lmms-eval</a> (LLaVA team), which enables quick evaluation with just a single line of code.
+	</li><br>
+	
+	<li><i>Oct. 2024:</i> We release a new version of MovieChat, which use LLaVA-OneVision as the base model instead of the original VideoLLaMA. The new version is available on <a href="https://github.com/rese1f/MovieChat/tree/main/MovieChat_Onevision">Github</a>.
+	</li><br>
+	
+	<li><i>Oct. 2024:</i> Our paper <i>MovieChat+: Question-aware Sparse Memory for Long Video Question Answering</i> is released, and the code is available at <a href="https://rese1f.github.io/MovieChat/">website</a>.
+	</li><br>
+
+	<li><i>Oct. 2024:</i>  Our paper <i>Meissonic: Revitalizing Masked Generative Transformers for Efficient High-Resolution Text-to-Image Synthesis</i> is released, and the code is available at <a href="https://huggingface.co/MeissonFlow/Meissonic">website</a>.
+	</li><br>
+
+	<li><i>Oct. 2024:</i>  Our paper <i>AuroraCap: Efficient, Performant Video Detailed Captioning and a New Benchmark</i> is released, and the code is available at <a href="https://github.com/rese1f/aurora">website</a>.
+	</li><br>
+	
+	<li><i>Jun. 2024:</i>  We finish CVPR 2024 Long-form Video Understanding Challenge @ <a href="https://sites.google.com/view/loveucvpr24/home">LOVEU</a> and presented a summary of the competition results offline.</a>
+	</li><br>
+	
+	<li><i>May 2024:</i>  Finish my research internship at Microsoft Research Asia (MSRA), Beijing.</a>
+	</li><br>
+	
 	<li><i>Apr. 2024:</i> <i class="fa-solid fa-trophy"></i> We are hosting CVPR 2024 Long-form Video Understanding Challenge @ <a href="https://sites.google.com/view/loveucvpr24/track1">LOVEU</a>
 	</li><br>
 
-	<li><i>Apr. 2024:</i> <i class="fa-regular fa-note-sticky" style="font-size:20px"></i> Our paper <i>MovieChat+: Question-aware Sparse Memory for Long Video Question Answering</i> is released, and the code is available at <a href="https://rese1f.github.io/MovieChat/">website</a>.
+	<li><i>Apr. 2024:</i> Our paper <i>MovieChat+: Question-aware Sparse Memory for Long Video Question Answering</i> is released, and the code is available at <a href="https://rese1f.github.io/MovieChat/">website</a>.
 	</li><br>
 	
-	<li><i>Feb. 2024:</i> <i class="fa-regular fa-note-sticky" style="font-size:20px"></i> Our paper <i>MovieChat: From Dense Token to Sparse Memory in Long Video Understanding</i> is accepted by Computer Vision and Pattern Recognition (CVPR), 2024.
+	<li><i>Feb. 2024:</i> Our paper <i>MovieChat: From Dense Token to Sparse Memory in Long Video Understanding</i> is accepted by Computer Vision and Pattern Recognition (CVPR), 2024.
 	</li><br>
 	
-	<li><i>Nov. 2023:</i> <img src="static/imgs/microsoft.png" width="25" height="25" style="vertical-align:text-bottom"/> Become a research intern at <a href="https://www.msra.cn/">Microsoft Research Asia (MSRA)</a>, advised by principal researcher <a href="https://scholar.google.com/citations?user=Ow4R8-EAAAAJ&hl=en&oi=ao">Xun Guo</a>.
+	<li><i>Nov. 2023:</i> <img src="static/imgs/microsoft.png" width="20" height="20" style="vertical-align:text-bottom"/> Become a research intern at <a href="https://www.msra.cn/">Microsoft Research Asia (MSRA)</a>, advised by principal researcher <a href="https://scholar.google.com/citations?user=Ow4R8-EAAAAJ&hl=en&oi=ao">Xun Guo</a>.
 	</li><br>
 
-	<li><i>Sept 2023:</i> <i class="fa-regular fa-note-sticky" style="font-size:20px"></i> Our paper <i>Devil in the Number: Towards Robust Multi-modality Data Filter</i> is accepted by ICCV 2023 workshop: <a href="https://www.datacomp.ai/">TNGCV-DataComp</a>.
+	<li><i>Sep. 2023:</i>  Our paper <i>Devil in the Number: Towards Robust Multi-modality Data Filter</i> is accepted by ICCV 2023 workshop: <a href="https://www.datacomp.ai/">TNGCV-DataComp</a>.
 	</li><br>
 	
-	<li><i>Jul.2023:</i> <i class="fa-regular fa-copy" style="font-size:20px"></i> Our project <i>MovieChat: From Dense Token to Sparse Memory in Long Video Understanding</i> is released at <a href="https://rese1f.github.io/MovieChat/">website</a>.
+	<li><i>Jul. 2023:</i>  Our project <i>MovieChat: From Dense Token to Sparse Memory in Long Video Understanding</i> is released at <a href="https://rese1f.github.io/MovieChat/">website</a>.
 	</li><br>
 	
-	<li><i>Jun.2023:</i> <img src="static/imgs/dlut.png" width="25" height="25" style="vertical-align:text-bottom"/> I graduate from Dalian University of Technology.
+	<li><i>Jun. 2023:</i> <img src="static/imgs/dlut.png" width="20" height="20" style="vertical-align:text-bottom"/> I graduate from Dalian University of Technology.
 	</li><br>
 
-	<li><i>Oct.2022:</i> Start my research on domain adaptation task for image caption, advised by Professor <a href="https://person.zju.edu.cn/en/gaoangwang/">Gaoang Wang</a>.
+	<li><i>Oct. 2022:</i> Start my research on domain adaptation task for image caption, advised by Professor <a href="https://person.zju.edu.cn/en/gaoangwang/">Gaoang Wang</a>.
 	</li><br>
 
 </ul>
