--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <div id="profile-cover" class="cover shallow-bg img-responsive"> 
     <div id="profile-namecard" class="profile-wrapper wrapper-light">
       <div id="my-pic" class="profile-col profile-col-1">
-        <img id="profile-avatar" src="./images/self-portrait/me.jpg" alt="Me" class="circle-img border-dark"-/>
+        <img id="profile-avatar" src="./images/self-portrait/me.JPEG" alt="Me" class="circle-img border-dark"-/>
       </div>
       <div id="my-contact" class="profile-col profile-col-2">
         <div id="my-name" class="text-grey-dark">
@@ -382,14 +382,22 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     News
   </h1>  
   <ul>
-    <li class="indented" data-date="[Sept, 2024]"> One paper accepted to NeurIPS 2024. </li>
-    <li class="indented" data-date="[Dec, 2023]"> Awarded <a href='https://www.sensetime.com/en/technology-personnel'> <b>SenseTime Scholarship</b></a>, a research scholarship selecting 30 undergraduate AI talents in China. </li>
-    <li class="indented" data-date="[Oct, 2023]"> Our paper was selected for the  <span style="color: red;">Best Paper Award</span> and a <span style="color: red;">Spotlight Talk</span> at the  <a href='https://dlde-2023.github.io/'>Neurips 2023 DLDE Workshop!</a> </li>
-    <li class="indented" data-date="[Oct, 2023]"> One paper on Physics informed Machine Learning (TANGO) now available on arXiv. </li>
-    <li class="indented" data-date="[Feb, 2023]"> One paper accepted to AAAI 2023.</li>
+    <li class="indented" data-date="[Oct, 2024]"> We submit some baseline (AuroraCap, MovieChat, MovieChat-Onevision) and some benchmark (VDC, MovieChat-1K) to <a href="https://github.com/EvolvingLMMs-Lab/lmms-eval">lmms-eval</a> (LLaVA team), which enables quick evaluation with just a single line of code. </li>
+    <li class="indented" data-date="[Oct, 2024]"> We release a new version of MovieChat, which use LLaVA-OneVision as the base model instead of the original VideoLLaMA. The new version is available on <a href="https://github.com/rese1f/MovieChat/tree/main/MovieChat_Onevision">Github</a>. </li>
+    <li class="indented" data-date="[Oct, 2024]"> Our paper <i>Meissonic: Revitalizing Masked Generative Transformers for Efficient High-Resolution Text-to-Image Synthesis</i> is released, and the code is available at <a href="https://huggingface.co/MeissonFlow/Meissonic">website</a>. </li> 
+    <li class="indented" data-date="[Oct, 2024]"> Our paper <i>AuroraCap: Efficient, Performant Video Detailed Captioning and a New Benchmark</i> is released, and the code is available at <a href="https://github.com/rese1f/aurora">website</a>. </li>   
+    <li class="indented" data-date="[Jun, 2024]"> We finish CVPR 2024 Long-form Video Understanding Challenge @ <a href="https://sites.google.com/view/loveucvpr24/home">LOVEU</a> and presented a summary of the competition results offline.</a> </li>  
+    <li class="indented" data-date="[May, 2024]"> Finish my research internship at Microsoft Research Asia (MSRA), Beijing.</a> </li>   
+    <li class="indented" data-date="[Apr, 2024]"> <i class="fa-solid fa-trophy"></i> We are hosting CVPR 2024 Long-form Video Understanding Challenge @ <a href="https://sites.google.com/view/loveucvpr24/track1">LOVEU</a> </li>  
+    <li class="indented" data-date="[Apr, 2024]"> Our paper <i>MovieChat+: Question-aware Sparse Memory for Long Video Question Answering</i> is released, and the code is available at <a href="https://rese1f.github.io/MovieChat/">website</a>. </li>
+    <li class="indented" data-date="[Feb, 2024]"> Our paper <i>MovieChat: From Dense Token to Sparse Memory in Long Video Understanding</i> is accepted by Computer Vision and Pattern Recognition (CVPR), 2024. </li>
+    <li class="indented" data-date="[Nov, 2023]"> Become a research intern at <a href="https://www.msra.cn/">Microsoft Research Asia (MSRA)</a>, advised by principal researcher <a href="https://scholar.google.com/citations?user=Ow4R8-EAAAAJ&hl=en&oi=ao">Xun Guo</a>. </li>
+    <li class="indented" data-date="[Sep, 2023]"> Our paper <i>Devil in the Number: Towards Robust Multi-modality Data Filter</i> is accepted by ICCV 2023 workshop: <a href="https://www.datacomp.ai/">TNGCV-DataComp</a>. </li>
+    <li class="indented" data-date="[Jul, 2023]"> Our project <i>MovieChat: From Dense Token to Sparse Memory in Long Video Understanding</i> is released at <a href="https://rese1f.github.io/MovieChat/">website</a>. </li>
+    <li class="indented" data-date="[Jun, 2023]"> I graduate from Dalian University of Technology. </li>
+    <li class="indented" data-date="[Oct, 2022]"> Start my research on domain adaptation task for image caption, advised by Professor <a href="https://person.zju.edu.cn/en/gaoangwang/">Gaoang Wang</a>. </li>
   </ul>
 </div>
-
 
 
 <div id="publications" class="publications">
