--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <meta name="keywords" lang="en" content="Enxin Song." />
   
 
-  <link rel="shortcut icon" href="images/icon/z.jpg">
+  <link rel="shortcut icon" href="old_web/static/imgs/favicon.ico">
   <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="css/custom.css">
 
@@ -223,7 +223,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <div class="bio-body" style="overflow:hidden;">
     <p> 
       Hi, I am currently a graduate student at <a href="https://zjui.intl.zju.edu.cn//"><strong>Zhejiang University</strong></a>, <a href="https://cvnext.github.io/">CVNext Lab</a> advised by <a href="https://scholar.google.com/citations?user=GhsXNiwAAAAJ&hl=zh-CN">Gaoang Wang</a>. 
-      I obtained my B.S. degree in Software Engineering from <a href="https://en.dlut.edu.cn/"><strong>Dalian University of Technology</strong></a>. 
+      I obtained my B.S. degree in Software Engineering from <a href="https://en.dlut.edu.cn/">Dalian University of Technology</a>. 
       Previously, I was a research intern at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/"> Microsoft Research Asia</a>.
       My research primarily in large multimodal models (LMMs) for video understanding, and generative models.
       <br>
