--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <a class="page-link" href="#awards"><b>Honors & Awards</b></a>
     <a class="page-link" href="#teaching"><b>Teaching </b></a>
     <a class="page-link" href="#academicservices"><b>Academic Services </b></a>
-    <a class="page-link" href="#misc"><b>CV</b></a>
+    <!-- <a class="page-link" href="#misc"><b>CV</b></a> -->
     <!--<a class="page-link" href="#otherprojects">Projects</a>-->
     <!-- Button for Posts -->
   </div>
@@ -128,7 +128,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         <div id="my-title" class="text-grey">
           <!-- Math Undergrad @ ZJU 24'<br> -->
-          Master Student @ Zhejiang University
+          Master Student @ ZJU
         </div>
         <!-- <div id="my-email" class="text-grey-light">
           wjzhao1203[at]gmail.com
@@ -388,14 +388,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <li class="indented" data-date="[Oct, 2024]"> Our paper <i>AuroraCap: Efficient, Performant Video Detailed Captioning and a New Benchmark</i> is released, and the code is available at <a href="https://github.com/rese1f/aurora">website</a>. </li>   
     <li class="indented" data-date="[Jun, 2024]"> We finish CVPR 2024 Long-form Video Understanding Challenge @ <a href="https://sites.google.com/view/loveucvpr24/home">LOVEU</a> and presented a summary of the competition results offline.</a> </li>  
     <li class="indented" data-date="[May, 2024]"> Finish my research internship at Microsoft Research Asia (MSRA), Beijing.</a> </li>   
-    <li class="indented" data-date="[Apr, 2024]"> <i class="fa-solid fa-trophy"></i> We are hosting CVPR 2024 Long-form Video Understanding Challenge @ <a href="https://sites.google.com/view/loveucvpr24/track1">LOVEU</a> </li>  
+    <li class="indented" data-date="[Apr, 2024]"> We are hosting CVPR 2024 Long-form Video Understanding Challenge @ <a href="https://sites.google.com/view/loveucvpr24/track1">LOVEU</a> </li>  
     <li class="indented" data-date="[Apr, 2024]"> Our paper <i>MovieChat+: Question-aware Sparse Memory for Long Video Question Answering</i> is released, and the code is available at <a href="https://rese1f.github.io/MovieChat/">website</a>. </li>
     <li class="indented" data-date="[Feb, 2024]"> Our paper <i>MovieChat: From Dense Token to Sparse Memory in Long Video Understanding</i> is accepted by Computer Vision and Pattern Recognition (CVPR), 2024. </li>
-    <li class="indented" data-date="[Nov, 2023]"> Become a research intern at <a href="https://www.msra.cn/">Microsoft Research Asia (MSRA)</a>, advised by principal researcher <a href="https://scholar.google.com/citations?user=Ow4R8-EAAAAJ&hl=en&oi=ao">Xun Guo</a>. </li>
+    <!-- <li class="indented" data-date="[Nov, 2023]"> Become a research intern at <a href="https://www.msra.cn/">Microsoft Research Asia (MSRA)</a>, advised by principal researcher <a href="https://scholar.google.com/citations?user=Ow4R8-EAAAAJ&hl=en&oi=ao">Xun Guo</a>. </li>
     <li class="indented" data-date="[Sep, 2023]"> Our paper <i>Devil in the Number: Towards Robust Multi-modality Data Filter</i> is accepted by ICCV 2023 workshop: <a href="https://www.datacomp.ai/">TNGCV-DataComp</a>. </li>
     <li class="indented" data-date="[Jul, 2023]"> Our project <i>MovieChat: From Dense Token to Sparse Memory in Long Video Understanding</i> is released at <a href="https://rese1f.github.io/MovieChat/">website</a>. </li>
     <li class="indented" data-date="[Jun, 2023]"> I graduate from Dalian University of Technology. </li>
-    <li class="indented" data-date="[Oct, 2022]"> Start my research on domain adaptation task for image caption, advised by Professor <a href="https://person.zju.edu.cn/en/gaoangwang/">Gaoang Wang</a>. </li>
+    <li class="indented" data-date="[Oct, 2022]"> Start my research on domain adaptation task for image caption, advised by Professor <a href="https://person.zju.edu.cn/en/gaoangwang/">Gaoang Wang</a>. </li> -->
   </ul>
 </div>
 
@@ -467,17 +467,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <a class="author" href="">Zhihong Shao</a>,
             <a class="author" href="https://wanjiazhao1203.github.io/"><b>Wanjia Zhao</b></a>,
             <a class="author" href="">Haocheng Wang</a>,
-            <a class="author" href="">Bo Liu</a>,
-            <a class="author" href="">Liyue Zhang</a>,
-            <a class="author" href="">Xuan Lu</a>,
-            <a class="author" href="">Qiushi Du</a>,
-            <a class="author" href="">Wenjun Gao</a>,
-            <a class="author" href="">Qihao Zhu</a>,
-            <a class="author" href="">Dejian Yang</a>,
-            <a class="author" href="">Zhibin Gou</a>,
-            <a class="author" href="">ZF Wu</a>,
-            <a class="author" href="">Fuli Luo</a>,
-            <a class="author" href="">Chong Ruan</a>
+
           </font>
         </div>
         <div class="publish">
@@ -692,7 +682,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </h1>  
       <b>Conference Reviewer:</b> NeurIPS, COLING, IJCAI, ACM MM<br>
       <b>Journal Reviewer:</b> IEEE Transactions on Big Data, PLOS ONE<br>
-      <b>Volunteer:</b> KDD 2023, NeurIPS 2023
+      <!-- <b>Volunteer:</b> KDD 2023, NeurIPS 2023 -->
     </div>
   </div>
 </div>
@@ -704,7 +694,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-<div class="wrapper">
+<!-- <div class="wrapper">
   <div id="misc" class="bio">
     <div class="bio-body" style="overflow:hidden;">
       <h1 class="md-heading text-left">
@@ -728,7 +718,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
   </div>
 </div>
-
+ -->
 
 
 
@@ -739,13 +729,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
           <li>Personal Email:</li>
-          <li><a href="mailto:">wanjiazh [at] stanford.edu</a></li>
-          <li><a href="mailto:">wjzhao1203 [at] gmail.com</a></li>
+          <li><a href="mailto:">enxin.23 [at] intl.zju.edu.cn</a></li>
+          <li><a href="mailto:">enxin.song.dut [at] gmail.com</a></li>
         </ul>
       </div>
 
       <div class="footer-col  footer-col-2">
-          <a href="https://scholar.google.com/citations?user=LUByMsoAAAAJ&hl=zh-CN" class="icon-button github">
+          <a href="https://scholar.google.com.hk/citations?user=sLqa-3oAAAAJ&hl=zh-CN" class="icon-button github">
           <i class="ai ai-google-scholar-square icon-github"></i>
             <span></span>
           </a>
@@ -755,16 +745,22 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <span></span>
           </a>
 
-          <a href="https://www.linkedin.com/in/wanjia-zhao-299b13281/" class="icon-button linkedin">
-            <i class="fa fa-linkedin icon-linkedin"></i>
+          <a href="https://github.com/Espere-1119-Song" class="icon-button github">
+            <i class="fa fa-github icon-github"></i>
             <span></span>
           </a>
 
-          <a href="https://twitter.com/WanjiaZhao1203" class="icon-button twitter">
+          <a href="https://linkedin.com/in/enxinsong-57b471286/" class="icon-button linkedin">
+            <i class="fa fa-linkedin icon-linkedin"></i>
+            <span></span>
+          </a>
+          
+          <a href="https://twitter.com/EnxinSong" class="icon-button twitter">
             <i class="fa fa-twitter icon-twitter"></i>
             <span></span>
           </a>
-          <a href="mailto:wanjiazh@stanford.edu" class="icon-button github">
+         
+          <a href="mailto:enxin.23@intl.zju.edu.cn" class="icon-button github">
             <i class="fa fa-envelope icon-github"></i>
             <span></span>
           </a>
@@ -775,7 +771,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
 	<div class="footer-col footer-col-3">
     <a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fwanjiazhao1203.github.io&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=visitors&edge_flat=false"/></a>
-		<p class="text">Last updated: Jun, 2024.<br>The style of this website is borrowed from <a href='http://hexianghu.com/'>Hexiang Hu's</a>.</p>
+		<p class="text">Last updated: Nov, 2024.<br>The style of this website is borrowed from <a href='https://wanjiazhao1203.github.io/'>Wanjia Zhao's</a>.</p>
 	</div>
   </div>
   </div>
