--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <a class="page-link" href="#publications"><b>Publications</b></a>
     <a class="page-link" href="#awards"><b>Honors & Awards</b></a>
     <a class="page-link" href="#teaching"><b>Teaching </b></a>
-    <a class="page-link" href="#academicservices"><b>Academic Services </b></a>
+    <a class="page-link" href="#academicservices"><b>Professional Services </b></a>
     <!-- <a class="page-link" href="#misc"><b>CV</b></a> -->
     <!--<a class="page-link" href="#otherprojects">Projects</a>-->
     <!-- Button for Posts -->
@@ -528,31 +528,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 
 
-<div class="wrapper">
-  <div id="awards" class="bio">
-    <h1 class="md-heading text-left">
-      <i class="fa fa-tasks" aria-hidden="true"></i>
-      Selected Honors & Awards
-    </h1>
-    <ul>
-      <li> NeurlPS 2024 Scholar Award, 2024</li>
-      <li> Outstanding Graduates of Zhejiang Province and Zhejiang University, 2024</li>
-      <li> SenseTime Scholarship, 2023</li>
-      <li> Best Paper Award, NeurIPS 2023 Workshop (Deep Learning and Differential Equation), 2023</li>
-      <!-- <li> NeurIPS Student Travel Award, 2023</li> -->
-      <li> Zhejiang Provincial Scholarship, 2023</li>
-      <li> Zhejiang University Scholarship - First Prize (Top 3%), 2023</li>
-      <li> Zhejiang University Top Students in Basic Disciplines Scholarship - First Prize, 2023</li>
-      <li> CKC Honors College Scientific Research Scholarship (Top 10 Projects), 2023</li>
-      <!-- <li> Zhejiang University Outstanding Student Award, Twice</li> -->
-      <!-- <li> NanDu Innovation Scholarship, 2022</li> -->
-      <li> First Prize of Zhejiang Physics Innovation Competition, 2021, 2022</li>
-      <!-- <li> CKC Honors College Scholarship for Leading Achievements, 2021</li> -->
-      <li> Silver Medal of Chinese Physics Olympiad, 2019</li>
-      <li> First Prize of Chinese Physics Olympiad, 2019</li>
-    </ul>
-  </div>
-</div>
 
 <!-- <div class="wrapper">
 <div id="timeline" class="timeline-brief">
@@ -655,33 +630,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 </div> -->
 
-
-<div class="wrapper">
-  <div id="teaching" class="bio">
-      <h1 class="md-heading text-left">
-        <i class="fa fa-tasks" aria-hidden="true"></i>
-        Teaching
-      </h1>  
-      <li>
-        <strong>Math 061B0020: Complex Variable Functions & Integral Transformation - Fall 2023</strong><br>
-        &nbsp&nbsp&nbsp&nbsp Teaching Assistant (TA), with <a href="https://person.zju.edu.cn/en/xxu">Prof. Xiang Xu</a>
-      </li>
-      <li>
-        <strong>Math 0609001001(Graduate Courses): Applied Mathematical Methods - Winter 2023</strong><br>
-        &nbsp&nbsp&nbsp&nbsp Teaching Assistant (TA), with <a href="https://person.zju.edu.cn/en/xxu">Prof. Xiang Xu</a>
-      </li>
-  </div>
-</div>
-
 <div class="wrapper">
   <div id="academicservices" class="bio">
     <div class="bio-body" style="overflow:hidden;">
       <h1 class="md-heading text-left">
         <i class="fa fa-tasks" aria-hidden="true"></i>
-        Academic Services
+        Professional Service
       </h1>  
-      <b>Conference Reviewer:</b> NeurIPS, COLING, IJCAI, ACM MM<br>
-      <b>Journal Reviewer:</b> IEEE Transactions on Big Data, PLOS ONE<br>
+      <b>Conference and Journal Refereeing:</b> ICLR2025, TMM2024, PRCV2023<br>
+      <b>Workshop Organization:</b> Workshop on Long-form Video Understanding at CVPR 2024<br>
       <!-- <b>Volunteer:</b> KDD 2023, NeurIPS 2023 -->
     </div>
   </div>
@@ -689,8 +646,48 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
+<div class="wrapper">
+  <div id="teaching" class="bio">
+      <h1 class="md-heading text-left">
+        <i class="fa fa-tasks" aria-hidden="true"></i>
+        Teaching Assistant
+      </h1>  
+      <li>
+        <strong>ZJUI Senior Design - Sping 2024</strong><br>
+        &nbsp&nbsp&nbsp&nbsp Teaching Assistant (TA), with <a href="https://person.zju.edu.cn/en/gaoangwang/">Prof. Gaoang Wang</a>
+      </li>
+      <!-- <li>
+        <strong>Math 0609001001(Graduate Courses): Applied Mathematical Methods - Winter 2023</strong><br>
+        &nbsp&nbsp&nbsp&nbsp Teaching Assistant (TA), with <a href="https://person.zju.edu.cn/en/xxu">Prof. Xiang Xu</a>
+      </li> -->
+  </div>
+</div>
 
-
+<div class="wrapper">
+  <div id="awards" class="bio">
+    <h1 class="md-heading text-left">
+      <i class="fa fa-tasks" aria-hidden="true"></i>
+      Selected Honors & Awards
+    </h1>
+    <ul>
+      <li> NeurlPS 2024 Scholar Award, 2024</li>
+      <li> Outstanding Graduates of Zhejiang Province and Zhejiang University, 2024</li>
+      <li> SenseTime Scholarship, 2023</li>
+      <li> Best Paper Award, NeurIPS 2023 Workshop (Deep Learning and Differential Equation), 2023</li>
+      <!-- <li> NeurIPS Student Travel Award, 2023</li> -->
+      <li> Zhejiang Provincial Scholarship, 2023</li>
+      <li> Zhejiang University Scholarship - First Prize (Top 3%), 2023</li>
+      <li> Zhejiang University Top Students in Basic Disciplines Scholarship - First Prize, 2023</li>
+      <li> CKC Honors College Scientific Research Scholarship (Top 10 Projects), 2023</li>
+      <!-- <li> Zhejiang University Outstanding Student Award, Twice</li> -->
+      <!-- <li> NanDu Innovation Scholarship, 2022</li> -->
+      <li> First Prize of Zhejiang Physics Innovation Competition, 2021, 2022</li>
+      <!-- <li> CKC Honors College Scholarship for Leading Achievements, 2021</li> -->
+      <li> Silver Medal of Chinese Physics Olympiad, 2019</li>
+      <li> First Prize of Chinese Physics Olympiad, 2019</li>
+    </ul>
+  </div>
+</div>
 
 
 
