--- a/index.html
+++ b/index.html
@@ -403,8 +403,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div id="publications" class="publications">
   <h1 class="md-heading text-left">
     <i class="fa fa-file" aria-hidden="true"></i>
-    Publications and Manuscripts
+    Selected Publications and Manuscripts
   </h1>
+
+  <p>
+    * Equal contribution. † Project lead. ‡ Corresponding author.
+    <font color="grey" size="3">
+    Also see <a href="https://scholar.google.com/citations?user=sLqa-3oAAAAJ&hl=en" target="_blank">Google Scholar</a>.
+    </font>
+  </p>
 
   <div class="pub-list">
     
@@ -670,21 +677,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       Selected Honors & Awards
     </h1>
     <ul>
-      <li> NeurlPS 2024 Scholar Award, 2024</li>
-      <li> Outstanding Graduates of Zhejiang Province and Zhejiang University, 2024</li>
-      <li> SenseTime Scholarship, 2023</li>
-      <li> Best Paper Award, NeurIPS 2023 Workshop (Deep Learning and Differential Equation), 2023</li>
-      <!-- <li> NeurIPS Student Travel Award, 2023</li> -->
-      <li> Zhejiang Provincial Scholarship, 2023</li>
-      <li> Zhejiang University Scholarship - First Prize (Top 3%), 2023</li>
-      <li> Zhejiang University Top Students in Basic Disciplines Scholarship - First Prize, 2023</li>
-      <li> CKC Honors College Scientific Research Scholarship (Top 10 Projects), 2023</li>
-      <!-- <li> Zhejiang University Outstanding Student Award, Twice</li> -->
-      <!-- <li> NanDu Innovation Scholarship, 2022</li> -->
-      <li> First Prize of Zhejiang Physics Innovation Competition, 2021, 2022</li>
-      <!-- <li> CKC Honors College Scholarship for Leading Achievements, 2021</li> -->
-      <li> Silver Medal of Chinese Physics Olympiad, 2019</li>
-      <li> First Prize of Chinese Physics Olympiad, 2019</li>
+      <li> National Scholarship, 2024 (Zhejiang University)</li>
+      <li> National Scholarship, 2021 (Dalian University of Technology)</li>
     </ul>
   </div>
 </div>
@@ -719,7 +713,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-
 <footer class="site-footer">
   <div class="wrapper">
     <div class="footer-col-wrapper">
@@ -734,11 +727,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class="footer-col  footer-col-2">
           <a href="https://scholar.google.com.hk/citations?user=sLqa-3oAAAAJ&hl=zh-CN" class="icon-button github">
           <i class="ai ai-google-scholar-square icon-github"></i>
-            <span></span>
-          </a>
-
-          <a href="https://github.com/wanjiaZhao1203" class="icon-button github">
-            <i class="fa fa-github icon-github"></i>
             <span></span>
           </a>
 
