--- a/index.html
+++ b/index.html
@@ -421,21 +421,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
       <div class="pub-right">
         <div class="title">
-          Physics-Informed Regularization for Domain-Agnostic Dynamical System Modeling
+          AuroraCap: Efficient, Performant Video Detailed Captioning and a New Benchmark
         </div>
         <div class="desc">
         </div>
         <div class="authors">
           <font style="font-size: 11pt;">
-            <a class="author" href="https://zijieh.github.io/">Zijie Huang*</a>,
-            <a class="author" href="https://wanjiazhao1203.github.io/"><b>Wanjia Zhao*</b></a>,
-            <a class="author" href="https://scholar.google.com/citations?user=NeSFjwEAAAAJ&hl=en">Jingdong Gao</a>,
-            <a class="author" href="https://acbull.github.io/">Ziniu Hu</a>,
-            <a class="author" href="https://luoxiao12.github.io/">Xiao Luo</a>,
-            <a class="author" href="https://eydcao.github.io/">Yadi Cao</a>,
-            <a class="author" href="https://www.linkedin.com/in/yuanzhou-chen-215032253/">Yuanzhou Chen</a>,
-            <a class="author" href="https://web.cs.ucla.edu/~yzsun/">Yizhou Sun</a>,
-            <a class="author" href="https://web.cs.ucla.edu/~weiwang/">Wei Wang</a>
+            <a class="author" href="https://rese1f.github.io/">Wenhao Chai*†</a>,
+            <a class="author" href="https://espere-1119-song.github.io/"><b>Enxin Song*</b></a>,
+            <a class="author" href="https://yilundu.github.io/">Yilun Du</a>,
+            <a class="author" href="https://cs.stanford.edu/~chenlin/">Chenlin Meng</a>,
+            <a class="author" href="https://scholar.google.com/citations?user=WjF1dugAAAAJ">Vashisht Madhavan</a>,
+            <a class="author" href="https://omerbt.github.io/">Omer Bar-Tal</a>,
+            <a class="author" href="https://people.ece.uw.edu/hwang/">Jeng-Neng Hwang</a>,
+            <a class="author" href="https://www.sainingxie.com/">Saining Xie</a>,
+            <a class="author" href="https://nlp.stanford.edu/~manning/">Christopher D. Manning</a>
             (* equal contribution)
           </font>
           </span>
@@ -446,16 +446,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         <div class="tags">
           [<a class="tag" href="https://arxiv.org/pdf/2410.06366"> <strong>Paper</strong></a>]
-          [<a class="tag" href="https://arxiv.org/abs/2410.06366"><strong>www</strong></a>]
-          [<a class="tag" href="https://github.com/wanjiaZhao1203/TREAT"><strong>Code</strong></a>]
-          [<a class="tag" href="https://treat-ode.github.io/"><strong>Project Website</strong></a>]
+          [<a class="tag" href="https://rese1f.github.io/aurora-web/"><strong>Website</strong></a>]
+          [<a class="tag" href="https://huggingface.co/collections/wchai/auroracap-66d117ffe13bedda96702013"><strong>Model</strong></a>]
+          [<a class="tag" href="https://huggingface.co/datasets/wchai/Video-Detailed-Caption"><strong>Benchmark</strong></a>]
+          [<a class="tag" href="https://huggingface.co/datasets/wchai/AuroraCap-trainset"><strong>Dataset</strong></a>]
+          [<a class="tag" href="https://github.com/rese1f/aurora"><strong>Code</strong></a>]
+          <img alt="NPM" src="https://img.shields.io/github/stars/rese1f/aurora?style=social">
         </div>
-        <b><span >Conference on Neural Information Processing Systems (NeurIPS 2024)</span></b>
-        <b><span style="color: red;"> Best Paper Award @ NeurIPS 2023 DLDE</span></b>
+        <b><span >AuroraCap is a multimodal LLM designed for image and video detailed captioning. We also release VDC, the first benchmark for detailed video captioning.</span></b>
+        <!-- <b><span >Conference on Neural Information Processing Systems (NeurIPS 2024)</span></b>
+        <b><span style="color: red;"> Best Paper Award @ NeurIPS 2023 DLDE</span></b> -->
       </div>
     </div>
-    
 
+    
     <div class="pub"></div>
       <div class="pub-left">
         <img class="intro-img frame" src="publications/DSprover.png">
