--- a/index.html
+++ b/index.html
@@ -408,16 +408,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
   <p>
     * Equal contribution. † Project lead. ‡ Corresponding author.
-    <font color="grey" size="3">
+  </p>
+  <p>
     Also see <a href="https://scholar.google.com/citations?user=sLqa-3oAAAAJ&hl=en" target="_blank">Google Scholar</a>.
-    </font>
   </p>
 
   <div class="pub-list">
     
     <div class="pub">
       <div class="pub-left">
-        <img class="intro-img frame" src="publications/TANGO.png">
+        <img class="intro-img frame" src="publications/auroracap.JPG">
       </div>
       <div class="pub-right">
         <div class="title">
@@ -454,12 +454,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <img alt="NPM" src="https://img.shields.io/github/stars/rese1f/aurora?style=social">
         </div>
         <b><span >AuroraCap is a multimodal LLM designed for image and video detailed captioning. We also release VDC, the first benchmark for detailed video captioning.</span></b>
-        <!-- <b><span >Conference on Neural Information Processing Systems (NeurIPS 2024)</span></b>
-        <b><span style="color: red;"> Best Paper Award @ NeurIPS 2023 DLDE</span></b> -->
+        <b><span >Conference on Neural Information Processing Systems (NeurIPS 2024)</span></b>
+        <!-- <b><span style="color: red;"> Best Paper Award @ NeurIPS 2023 DLDE</span></b> -->
       </div>
     </div>
 
-    
+
     <div class="pub"></div>
       <div class="pub-left">
         <img class="intro-img frame" src="publications/DSprover.png">
@@ -759,8 +759,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
       </div>
 	<div class="footer-col footer-col-3">
-    <a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fwanjiazhao1203.github.io&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=visitors&edge_flat=false"/></a>
-		<p class="text">Last updated: Nov, 2024.<br>The style of this website is borrowed from <a href='https://wanjiazhao1203.github.io/'>Wanjia Zhao's</a>.</p>
+    <a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fespere-1119-song.github.io&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/></a>
+    <p class="text">Last updated: Nov, 2024.<br>The style of this website is borrowed from <a href='https://wanjiazhao1203.github.io/'>Wanjia Zhao's</a>.</p>
 	</div>
   </div>
   </div>
