--- a/index.html
+++ b/index.html
@@ -399,6 +399,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </ul>
 </div>
 
+<br>
 
 <div id="publications" class="publications">
   <h1 class="md-heading text-left">
@@ -436,12 +437,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <a class="author" href="https://people.ece.uw.edu/hwang/">Jeng-Neng Hwang</a>,
             <a class="author" href="https://www.sainingxie.com/">Saining Xie</a>,
             <a class="author" href="https://nlp.stanford.edu/~manning/">Christopher D. Manning</a>
-            (* equal contribution)
           </font>
           </span>
         </div>
         <div class="publish">
-          <!-- <span class="publisher"> NeurIPS, 2024</span> -->
+          <span class="publisher">Preperint, 2024</span>
           <span class="place"></span>
         </div>
         <div class="tags">
@@ -454,86 +454,88 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <img alt="NPM" src="https://img.shields.io/github/stars/rese1f/aurora?style=social">
         </div>
         <b><span >AuroraCap is a multimodal LLM designed for image and video detailed captioning. We also release VDC, the first benchmark for detailed video captioning.</span></b>
-        <b><span >Conference on Neural Information Processing Systems (NeurIPS 2024)</span></b>
+        <!-- <b><span >Conference on Neural Information Processing Systems (NeurIPS 2024)</span></b> -->
         <!-- <b><span style="color: red;"> Best Paper Award @ NeurIPS 2023 DLDE</span></b> -->
       </div>
     </div>
 
-
-    <div class="pub"></div>
+    <div class="pub">
       <div class="pub-left">
-        <img class="intro-img frame" src="publications/DSprover.png">
+        <img class="intro-img frame" src="publications/moviechat.gif">
       </div>
       <div class="pub-right">
         <div class="title">
-          DeepSeek-Prover-V1. 5: Harnessing Proof Assistant Feedback for Reinforcement Learning and Monte-Carlo Tree Search
+          Fantasy: Transformer Meets Transformer in Text-to-Image Generation
         </div>
         <div class="desc">
         </div>
         <div class="authors">
           <font style="font-size: 11pt;">
-            <a class="author" href="">Huajian Xin</a>,
-            <a class="author" href="">ZZ Ren</a>,
-            <a class="author" href="">Junxiao Song</a>,
-            <a class="author" href="">Zhihong Shao</a>,
-            <a class="author" href="https://wanjiazhao1203.github.io/"><b>Wanjia Zhao</b></a>,
-            <a class="author" href="">Haocheng Wang</a>,
-
+            <a class="author" href="https://espere-1119-song.github.io/">Enxin Song*</a>,
+            <a class="author" href="https://rese1f.github.io/">Wenhao Chai*</a>,
+            <a class="author" href="">Xun Guo</a>,
+            <a class="author" href="https://person.zju.edu.cn/en/gaoangwang/">Gaoang Wang</a>,
+            <a class="author" href="https://people.ece.uw.edu/hwang/">Jenq-Neng Hwang</a>,
+            <a class="author" href="">Yan Lu</a>
           </font>
         </div>
         <div class="publish">
-          <span class="publisher">Preperint, 2024</span>
+          <span class="publisher">Computer Vision and Pattern Recognition (CVPR), 2024</span>
           <span class="place"></span>
         </div>
         <div class="tags">
-          [<a class="tag" href="https://arxiv.org/pdf/2408.08152"> <strong>Paper</strong></a>]
-          [<a class="tag" href="https://arxiv.org/abs/2408.08152"><strong>www</strong></a>]
-          [<a class="tag" href="https://github.com/deepseek-ai/DeepSeek-Prover-V1.5"><strong>Code</strong></a>]
-          [<a class="tag" href="https://huggingface.co/deepseek-ai/DeepSeek-Prover-V1.5-RL"><strong>Huggingface</strong></a>]
-          [<a class="tag" href="https://x.com/deepseek_ai/status/1824291724887208040"><strong>X.com</strong></a>]
-
+          [<a class="tag" href="https://openaccess.thecvf.com/content/CVPR2024/html/Song_MovieChat_From_Dense_Token_to_Sparse_Memory_for_Long_Video_CVPR_2024_paper.html"> <strong>Paper</strong></a>]
+          [<a class="tag" href="https://rese1f.github.io/MovieChat/"><strong>Website</strong></a>]
+          [<a class="tag" href="https://huggingface.co/datasets/Enxin/MovieChat-1K_train"><strong>Benchmark</strong></a>]
+          [<a class="tag" href="https://github.com/rese1f/MovieChat"><strong>Code</strong></a>]
+          <img alt="NPM" src="https://img.shields.io/github/stars/rese1f/MovieChat?style=social">
         </div>
+        <b><span >MovieChat achieves state-of-the-art performace in extra long video (more than 10K frames) understanding by introducing memory mechanism. </span></b>
       </div>
     </div>
-    <br>
 
     <div class="pub">
       <div class="pub-left">
-        <img class="intro-img frame" src="publications/covpu.png">
+        <img class="intro-img frame" src="publications/moviechat.gif">
       </div>
       <div class="pub-right">
         <div class="title">
-          Positive Distribution Pollution: Rethinking Positive Unlabeled Learning From a Unified Perspective
+          MovieChat: From Dense Token to Sparse Memory for Long Video Understanding
         </div>
         <div class="desc">
         </div>
         <div class="authors">
           <font style="font-size: 11pt;">
-            <a class="author" href="">Qianqiao Liang</a>,
-            <a class="author" href=""> Mengying Zhu</a>,
-            <a class="author" href=""> Yan Wang</a>,
-            <a class="author" href=""> Xiuyuan Wang</a>,
-            <a class="author" href="https://wanjiazhao1203.github.io/"><b>Wanjia Zhao</b></a>,
-            <a class="author" href="">Mengyuan Yang</a>,
-            <a class="author" href="">Hua Wei</a>,
-            <a class="author" href="">Bing Han</a>,
-            <a class="author" href="">Xiaolin Zheng</a>
+            <a class="author" href="https://espere-1119-song.github.io/">Enxin Song*</a>,
+            <a class="author" href="https://rese1f.github.io/">Wenhao Chai*</a>,
+            <a class="author" href="">Guanhong Wang*</a>,
+            <a class="author" href="">Yucheng Zhang</a>,
+            <a class="author" href="">Haoyang Zhou</a>,
+            <a class="author" href="">Feiyang Wu</a>,
+            <a class="author" href="">Xun Guo</a>,
+            <a class="author" href="">Tian Ye</a>,
+            <a class="author" href="">Yan Lu</a>,
+            <a class="author" href="https://people.ece.uw.edu/hwang/">Jenq-Neng Hwang</a>,
+            <a class="author" href="https://person.zju.edu.cn/en/gaoangwang/">Gaoang Wang</a>
+
           </font>
         </div>
         <div class="publish">
-          <span class="publisher">AAAI Conference on Artificial Intelligence (AAAI 2023)</span>
+          <span class="publisher">Computer Vision and Pattern Recognition (CVPR), 2024</span>
           <span class="place"></span>
         </div>
         <div class="tags">
-          [<a class="tag" href="https://ojs.aaai.org/index.php/AAAI/article/view/26051/25823"> <strong>Paper</strong></a>]
-          [<a class="tag" href="https://ojs.aaai.org/index.php/AAAI/article/view/26051"><strong>www</strong></a>]
+          [<a class="tag" href="https://openaccess.thecvf.com/content/CVPR2024/html/Song_MovieChat_From_Dense_Token_to_Sparse_Memory_for_Long_Video_CVPR_2024_paper.html"> <strong>Paper</strong></a>]
+          [<a class="tag" href="https://rese1f.github.io/MovieChat/"><strong>Website</strong></a>]
+          [<a class="tag" href="https://huggingface.co/datasets/Enxin/MovieChat-1K_train"><strong>Benchmark</strong></a>]
+          [<a class="tag" href="https://github.com/rese1f/MovieChat"><strong>Code</strong></a>]
+          <img alt="NPM" src="https://img.shields.io/github/stars/rese1f/MovieChat?style=social">
         </div>
+        <b><span >MovieChat achieves state-of-the-art performace in extra long video (more than 10K frames) understanding by introducing memory mechanism. </span></b>
       </div>
     </div>
 
-
     
-
   </div>
 </div>
 </div>
