--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <div class="pub">
       <div class="pub-left">
-        <img class="intro-img frame" src="publications/moviechat.gif">
+        <img class="intro-img frame" src="publications/Fantasy.png">
       </div>
       <div class="pub-right">
         <div class="title">
@@ -480,17 +480,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </font>
         </div>
         <div class="publish">
-          <span class="publisher">Computer Vision and Pattern Recognition (CVPR), 2024</span>
+          <span class="publisher">Preperint, 2024</span>
           <span class="place"></span>
         </div>
         <div class="tags">
-          [<a class="tag" href="https://openaccess.thecvf.com/content/CVPR2024/html/Song_MovieChat_From_Dense_Token_to_Sparse_Memory_for_Long_Video_CVPR_2024_paper.html"> <strong>Paper</strong></a>]
-          [<a class="tag" href="https://rese1f.github.io/MovieChat/"><strong>Website</strong></a>]
-          [<a class="tag" href="https://huggingface.co/datasets/Enxin/MovieChat-1K_train"><strong>Benchmark</strong></a>]
-          [<a class="tag" href="https://github.com/rese1f/MovieChat"><strong>Code</strong></a>]
-          <img alt="NPM" src="https://img.shields.io/github/stars/rese1f/MovieChat?style=social">
+          [<a class="tag" href="https://openreview.net/forum?id=qL4nN6Ew7U"> <strong>Paper</strong></a>]
         </div>
-        <b><span >MovieChat achieves state-of-the-art performace in extra long video (more than 10K frames) understanding by introducing memory mechanism. </span></b>
+        <b><span >Fantasy, an efficient text-to-image generation model marrying the decoder-only Large Language Models (LLMs) and transformer-based masked image modeling (MIM). </span></b>
       </div>
     </div>
 
