--- a/index.html
+++ b/index.html
@@ -406,7 +406,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <i class="fa fa-file" aria-hidden="true"></i>
     Selected Publications and Manuscripts
   </h1>
-
   <p>
     * Equal contribution. † Project lead. ‡ Corresponding author.
   </p>
@@ -453,7 +452,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           [<a class="tag" href="https://github.com/rese1f/aurora"><strong>Code</strong></a>]
           <img alt="NPM" src="https://img.shields.io/github/stars/rese1f/aurora?style=social">
         </div>
-        <b><span >AuroraCap is a multimodal LLM designed for image and video detailed captioning. We also release VDC, the first benchmark for detailed video captioning.</span></b>
+        <span >AuroraCap is a multimodal LLM designed for image and video detailed captioning. We also release VDC, the first benchmark for detailed video captioning.</span>
         <!-- <b><span >Conference on Neural Information Processing Systems (NeurIPS 2024)</span></b> -->
         <!-- <b><span style="color: red;"> Best Paper Award @ NeurIPS 2023 DLDE</span></b> -->
       </div>
@@ -471,7 +470,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         <div class="authors">
           <font style="font-size: 11pt;">
-            <a class="author" href="https://espere-1119-song.github.io/">Enxin Song*</a>,
+            <a class="author" href="https://espere-1119-song.github.io/"><b>Enxin Song*</b></a>,
             <a class="author" href="https://rese1f.github.io/">Wenhao Chai*</a>,
             <a class="author" href="">Xun Guo</a>,
             <a class="author" href="https://person.zju.edu.cn/en/gaoangwang/">Gaoang Wang</a>,
@@ -486,7 +485,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="tags">
           [<a class="tag" href="https://openreview.net/forum?id=qL4nN6Ew7U"> <strong>Paper</strong></a>]
         </div>
-        <b><span >Fantasy, an efficient text-to-image generation model marrying the decoder-only Large Language Models (LLMs) and transformer-based masked image modeling (MIM). </span></b>
+        <span >Fantasy, an efficient text-to-image generation model marrying the decoder-only Large Language Models (LLMs) and transformer-based masked image modeling (MIM). </span>
       </div>
     </div>
 
@@ -502,7 +501,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         <div class="authors">
           <font style="font-size: 11pt;">
-            <a class="author" href="https://espere-1119-song.github.io/">Enxin Song*</a>,
+            <a class="author" href="https://espere-1119-song.github.io/"><b>Enxin Song*</b></a>,
             <a class="author" href="https://rese1f.github.io/">Wenhao Chai*</a>,
             <a class="author" href="">Guanhong Wang*</a>,
             <a class="author" href="">Yucheng Zhang</a>,
@@ -527,7 +526,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           [<a class="tag" href="https://github.com/rese1f/MovieChat"><strong>Code</strong></a>]
           <img alt="NPM" src="https://img.shields.io/github/stars/rese1f/MovieChat?style=social">
         </div>
-        <b><span >MovieChat achieves state-of-the-art performace in extra long video (more than 10K frames) understanding by introducing memory mechanism. </span></b>
+        <span >MovieChat achieves state-of-the-art performace in extra long video (more than 10K frames) understanding by introducing memory mechanism. </span>
       </div>
     </div>
 
