--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           [<a class="tag" href="https://rese1f.github.io/aurora-web/"><strong>Website</strong></a>]
           [<a class="tag" href="https://huggingface.co/collections/wchai/auroracap-66d117ffe13bedda96702013"><strong>Model</strong></a>]
           [<a class="tag" href="https://huggingface.co/datasets/wchai/Video-Detailed-Caption"><strong>Benchmark</strong></a>]
-          [<a class="tag" href="https://huggingface.co/datasets/wchai/AuroraCap-trainset"><strong>Dataset</strong></a>]
+          <!-- [<a class="tag" href="https://huggingface.co/datasets/wchai/AuroraCap-trainset"><strong>Dataset</strong></a>] -->
           [<a class="tag" href="https://github.com/rese1f/aurora"><strong>Code</strong></a>]
           <img alt="NPM" src="https://img.shields.io/github/stars/rese1f/aurora?style=social">
         </div>
@@ -516,7 +516,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </font>
         </div>
         <div class="publish">
-          <span class="publisher">Computer Vision and Pattern Recognition (CVPR), 2024</span>
+          <span class="publisher">CVPR, 2024</span>
           <span class="place"></span>
         </div>
         <div class="tags">
