--- a/index.html
+++ b/index.html
@@ -649,13 +649,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         Professional Service
       </h1>  
       <li>
-        <strong>Conference and Journal Refereeing:</strong> 
-        CVPR 2025, ICLR 2025, TMM 2024, PRCV 2023<br>
+        <strong>Conference and Journal Refereeing:</strong> <br>
+        &nbsp&nbsp&nbsp&nbsp CVPR 2025, ICLR 2025, TMM 2024, PRCV 2023<br>
       </li>
       <li>
-        <strong>Workshop Organization:</strong> 
-        Workshop on Long-form Video Understanding at CVPR 2025<br>
-        Workshop on Long-form Video Understanding at CVPR 2024<br>
+        <strong>Workshop Organization:</strong> <br>
+        &nbsp&nbsp&nbsp&nbsp Workshop on Long-form Video Understanding at CVPR 2025<br>
+        &nbsp&nbsp&nbsp&nbsp Workshop on Long-form Video Understanding at CVPR 2024<br>
       </li>
       <!-- <b>Volunteer:</b> KDD 2023, NeurIPS 2023 -->
     </div>
