--- a/index.html
+++ b/index.html
@@ -280,6 +280,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
       <tr>
+        <tr>
+          <td width="90%">
+            <li>
+              <strong>Feb. 2025 -- Present, University of California, San Diego (UCSD)</strong>, USA<br>
+              &nbsp&nbsp&nbsp&nbsp <strong>Visiting Intern</strong>, Advised by <a href="https://pages.ucsd.edu/~ztu/">Prof. Zhuowen Tu</a>.<br>
+            </li> 
+          </td>
+          <td width="10%">
+            <img src="images/icon/ucsd.png" width="40%" style="display: block; margin-left: auto; margin-right: auto;">
+          </td>
+        </tr>
 
         <tr>
           <td width="90%">
@@ -291,7 +302,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                
           </td>
           <td width="10%">
-            <img src="images/icon/msra.jpg" width="80%" style="display: block; margin-left: auto; margin-right: auto;">
+            <img src="images/icon/msra.jpg" width="40%" style="display: block; margin-left: auto; margin-right: auto;">
           </td>
         </tr>
 
