--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </li> 
           </td>
           <td width="10%">
-            <img src="images/icon/ucsd.png" width="40%" style="display: block; margin-left: auto; margin-right: auto;">
+            <img src="images/icon/UCSD.png" width="40%" style="display: block; margin-left: auto; margin-right: auto;">
           </td>
         </tr>
 
