--- a/index.html
+++ b/index.html
@@ -228,48 +228,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       Enxin stays curious about the wider landscape of computer vision and deep learning, and actively seeks new collaboration opportunities.
       Her work centers on video understanding, highlighted by MovieChat, the first Large Mutli-Modal Model for hour-long video understanding.
       She has co-organized workshops and challenges on video understanding at CVPR 2024 and 2025.
-      She is a highly self-motivated, curious, and patient student applying to <strong>Ph.D. programs for 2026Fall</strong>, hoping to discuss ideas and collaborate with outstanding peers and distinguished professors.
+      She is a highly self-motivated, curious, and patient student applying to <strong>Ph.D. programs for 2026Fall</strong>.
       <br>
     </p>
   </div>
 </div>
-
-
-<div id="Education" class="bio">
-
-  <h1 class="md-heading text-left">
-    <i class="fa fa-graduation-cap" aria-hidden="true"></i>
-    Education
-  </h1>
-  <div class="bio-body" style="overflow:hidden;">
-    <table>
-      <tbody><tr>
-          <td width="90%">
-              <br>
-              <strong>M.S.</strong> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Sep. 2023 - Mar. 2026 (expected)  <br> 
-              &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Zhejiang University</b>, Hangzhou, China.<br>
-              &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Master's in Artificial Intelligence
-                <br>
-            </td>
-          <td width="10%">
-            <img src="images/icon/zju.png" width="40%" style="display: block; margin-left: auto; margin-right: auto;">
-          </td>
-        </tr>
-        <tr>
-          <td width="90%">
-              <strong>B.S.</strong> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Sep. 2019 - Jun. 2023 <br>
-              &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<b>Dalian University of Technology (DLUT)</b> , Dalian, China.<br>
-              &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  B.S. in Software Engineering<br> 
-          </td>
-          <td width="10%">
-            <img src="images/icon/dlut.png" width="40%" style="display: block; margin-left: auto; margin-right: auto;">
-          </td>
-        </tr>
-    </tbody></table>
-  </div>
-  <br>
-</div>
-
 
 
 <div id="Experiences" class="bio">
@@ -315,6 +278,46 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 
 
+<div id="Education" class="bio">
+
+  <h1 class="md-heading text-left">
+    <i class="fa fa-graduation-cap" aria-hidden="true"></i>
+    Education
+  </h1>
+  <div class="bio-body" style="overflow:hidden;">
+    <table>
+      <tbody><tr>
+          <td width="90%">
+              <br>
+              <strong>M.S.</strong> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Sep. 2023 - Mar. 2026 (expected)  <br> 
+              &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Zhejiang University</b>, Hangzhou, China.<br>
+              &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 1/78, M.S. in Artificial Intelligence
+                <br>
+            </td>
+          <td width="10%">
+            <img src="images/icon/zju.png" width="40%" style="display: block; margin-left: auto; margin-right: auto;">
+          </td>
+        </tr>
+        <tr>
+          <td width="90%">
+              <strong>B.S.</strong> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Sep. 2019 - Jun. 2023 <br>
+              &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<b>Dalian University of Technology (DLUT)</b> , Dalian, China.<br>
+              &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  21/385, B.S. in Software Engineering<br> 
+          </td>
+          <td width="10%">
+            <img src="images/icon/dlut.png" width="40%" style="display: block; margin-left: auto; margin-right: auto;">
+          </td>
+        </tr>
+    </tbody></table>
+  </div>
+  <br>
+</div>
+
+
+
+
+
+
 
 
 
@@ -328,7 +331,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     News
   </h1>  
   <ul>
-    <li class="indented" data-date="[Apr, 2025]"> We are hosting CVPR 2025 Video Understanding Challenge @ <a href="https://sites.google.com/view/loveucvpr24/track1">LOVEU</a>. </li>
+    <li class="indented" data-date="[Apr, 2025]"> We are hosting two CVPR 2025 Video Understanding Challenge @ <a href="https://sites.google.com/view/loveucvpr25/track1a">LOVE Track 1A</a> and <a href="https://sites.google.com/view/loveucvpr25/track1b">LOVE Track 1B</a>. </li>
     <li class="indented" data-date="[Apr, 2025]"> We release <a href="https://arxiv.org/pdf/2504.14693">Video-MMLU</a>, a Massive Multi-Discipline Lecture Understanding Benchmark. </li>
     <li class="indented" data-date="[Mar, 2025]"> One paper accepted to CVPR 2025 workshop@<a href="https://sites.google.com/view/elvm/home">Efficient Large Vision Models</a>. </li>
     <li class="indented" data-date="[Jan, 2025]"> Our paper <i>AuroraCap: Efficient, Performant Video Detailed Captioning and a New Benchmark</i> is accepted by ICLR 2025. </li>
