--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </h1>
   <div class="bio-body" style="overflow:hidden;">
     <p> 
-      Enxin Song is a research intern at the University of California, San Diego (UCSD) under Prof. Zhuowen Tu. 
-      She will receive her M.S. in March 2026 from <a href="https://zjui.intl.zju.edu.cn//"><strong>Zhejiang University</strong></a>, advised by Prof. <a href="https://scholar.google.com/citations?user=GhsXNiwAAAAJ&hl=zh-CN">Gaoang Wang</a> (<a href="https://cvnext.github.io/">CVNext Lab</a>), and holds a B.S. in Software Engineering from <a href="https://en.dlut.edu.cn/">Dalian University of Technology</a>. 
+      Enxin Song is a research intern at the University of California, San Diego (<a href="https://www.ucsd.edu/">UCSD</a>) under Prof. <a href="https://pages.ucsd.edu/~ztu/">Zhuowen Tu</a>. 
+      She will receive her M.S. in March 2026 from <a href="https://zjui.intl.zju.edu.cn//">Zhejiang University</a>, advised by Prof. <a href="https://scholar.google.com/citations?user=GhsXNiwAAAAJ&hl=zh-CN">Gaoang Wang</a> (<a href="https://cvnext.github.io/">CVNext Lab</a>), and holds a B.S. in Software Engineering from <a href="https://en.dlut.edu.cn/">Dalian University of Technology</a>. 
       Previously, she was a research intern at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/"> Microsoft Research Asia</a>.
       Enxin stays curious about the wider landscape of computer vision and deep learning, and actively seeks new collaboration opportunities.
       Her work centers on video understanding, highlighted by MovieChat, the first Large Mutli-Modal Model for hour-long video understanding.
