--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       Enxin stays curious about the wider landscape of computer vision and deep learning, and actively seeks new collaboration opportunities.
       Her work centers on video understanding, highlighted by MovieChat, the first Large Mutli-Modal Model for hour-long video understanding.
       She has co-organized workshops and challenges on video understanding at CVPR 2024 and 2025.
-      She is a highly self-motivated, curious, and patient student applying to <strong>Ph.D. programs for 2026Fall</strong>.
+      She is a highly self-motivated, and curious student applying to <strong>Ph.D. programs for 2026Fall</strong>.
       <br>
     </p>
   </div>
@@ -291,7 +291,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <br>
               <strong>M.S.</strong> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Sep. 2023 - Mar. 2026 (expected)  <br> 
               &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Zhejiang University</b>, Hangzhou, China.<br>
-              &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 1/78, M.S. in Artificial Intelligence
+              &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 1/82, M.S. in Artificial Intelligence
                 <br>
             </td>
           <td width="10%">
@@ -657,7 +657,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         Teaching Assistant
       </h1>  
       <li>
-        <strong>ZJUI Senior Design - Sping 2024</strong><br>
+        <strong>ECE 445 Senior Design (Undergraduate) - Sping 2024</strong><br>
         &nbsp&nbsp&nbsp&nbsp Teaching Assistant (TA), with <a href="https://person.zju.edu.cn/en/gaoangwang/">Prof. Gaoang Wang</a>
       </li>
       <!-- <li>
