--- a/index.html
+++ b/index.html
@@ -716,6 +716,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
           <li>Personal Email:</li>
+          <li><a href="mailto:">ensong [at] ucsd.edu</a></li>
           <li><a href="mailto:">enxin.23 [at] intl.zju.edu.cn</a></li>
           <li><a href="mailto:">enxin.song.dut [at] gmail.com</a></li>
         </ul>
