--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </h1>  
       <li>
         <strong>Conference and Journal Refereeing:</strong> <br>
-        &nbsp&nbsp&nbsp&nbsp CVPR 2025, ICLR 2025, TMM 2024, PRCV 2023<br>
+        &nbsp&nbsp&nbsp&nbsp NeurIPS 2025, PRCV 2025, CVPR 2025, ICLR 2025, TMM 2024, PRCV 2023<br>
       </li>
       <li>
         <strong>Workshop Organization:</strong> <br>
